--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <title data-ng-bind="$title + ' | Let Me Cook For You'"></title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <div data-ui-view></div>
