--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <title data-ng-bind="$title + ' | Let Me Cook For You'"></title>
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <div data-ui-view></div>
 
+
     <script src="app/components/angular/angular.js"></script>
     <script src="app/components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/components/angular-ui-router-title/angular-ui-router-title.js"></script>
+    <script src="assets/js/jquery-1.12.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
     <script src="app/app.module.js"></script>
     <script src="app/dashboard/dashboard.module.js"></script>
