--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,9 @@
     <script src="app/components/angular/angular.js"></script>
     <script src="app/components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/components/angular-ui-router-title/angular-ui-router-title.js"></script>
+    <script src="app/components/lodash/dist/lodash.js"></script>
+    <script src="app/components/restangular/dist/restangular.js"></script>
+
 
     <script src="app/app.module.js"></script>
     <script src="app/core/core.module.js"></script>
