AuthRestangular and localstorage

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
     <script src="app/components/angular-ui-router-title/angular-ui-router-title.js"></script>
     <script src="app/components/lodash/dist/lodash.js"></script>
     <script src="app/components/restangular/dist/restangular.js"></script>
+    <script src="app/components/ngstorage/ngStorage.js"></script>
 
 
     <script src="app/app.module.js"></script>
