New angular modules/services

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,10 @@
     <script src="app/app.module.js"></script>
     <script src="app/core/core.module.js"></script>
     <script src="app/core/config.js"></script>
+    <script src="app/core/auth.service.js"></script>
     <script src="app/dashboard/dashboard.module.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
+    <script src="app/dashboard/event.module.js"></script>
+    <script src="app/dashboard/event.js"></script>
 </body>
 </html>
