--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,6 +1,6 @@
-    <div class="col-md-6 col-md-4" data-ng-reapeat="event in vm.events">
+    <div class="col-md-6 col-md-4" data-ng-repeat="event in vm.events">
         <div class="thumbnail">
-            <img src="{{ event.thumbnail }}" alt="{{ event.meal_name }}">
+            <img data-ng-if="event.thumbnail" src="{{ event.thumbnail }}" alt="{{ event.meal_name }}">
             <div class="caption">
                 <h3>{{ event.meal_name }}</h3>
                 <p>{{ event.description }}</p>
