--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,24 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+    <navbar>
+        <form class="form-inline" data-ng-if="auth.isLoggedIn">
+        <div class="form-group">
+            <label class="sr-only" for="exampleInputEmail3">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label class="sr-only" for="exampleInputPassword3">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"> Remember me
+            </label>
+        </div>
+        <button type="submit" class="btn btn-primary">Sign in</button>
+    </form>
+    </navbar>
     <div data-ui-view></div>
 
 
