--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -15,11 +15,7 @@
                 <button ng-click="vm.login()" type="submit" class="btn btn-primary">Sign In</button>
             </form>
             <form class="form-inline" data-ng-if="vm.isLoggedIn()">
-                <p class="navbar-text navbar-left">Welcome, <a href="#" class="navbar-link">{{ vm.user.username + "!" }}</a></p><!--
-                <p navbar-left><b>Search:</b></p>
-                <div class="col-xs-2">
-                    <input type="text" class="form-control" placeholder=".col-xs-2">
-                </div>-->
+                <p class="navbar-text navbar-right">Welcome, <a href="#" class="navbar-link">{{ " " + vm.user.username + "!" }}</a></p>
             </form>
         </div>
     </div>
