Profile and Search pages

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
 
     <script src="app/components/jquery/dist/jquery.js"></script>
     <script src="app/components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="app/components/bootstrap/js/carousel.js"></script>
     <script src="app/components/angular/angular.js"></script>
     <script src="app/components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/components/angular-ui-router-title/angular-ui-router-title.js"></script>
@@ -35,5 +36,9 @@
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/event/event.module.js"></script>
     <script src="app/event/event.js"></script>
+    <script src="app/search/search.module.js"></script>
+    <script src="app/search/search.js"></script>
+    <script src="app/profile/profile.module.js"></script>
+    <script src="app/profile/profile.js"></script>
 </body>
 </html>
