Changes to services

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <script src="app/core/core.module.js"></script>
     <script src="app/core/config.js"></script>
     <script src="app/core/auth.service.js"></script>
+    <script src="app/core/user.service.js"></script>
     <script src="app/navbar/navbar.module.js"></script>
     <script src="app/navbar/navbar.directive.js"></script>
     <script src="app/dashboard/dashboard.module.js"></script>
