--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -3,20 +3,18 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Let Me Cook For You
             </a>
-            <form class="form-inline" data-ng-if="!vm.isLoggedIn()">
-                <div class="form-group">
-                    <label class="sr-only" for="username">Username</label>
-                    <input ng-model="vm.username" type="text" class="form-control" id="username" placeholder="Enter username">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="password">Password</label>
-                    <input ng-model="vm.password" type="password" class="form-control" id="password" placeholder="Password">
-                </div>
-                <button ng-click="vm.login()" type="submit" class="btn btn-primary">Sign In</button>
-            </form>
-            <form class="form-inline" data-ng-if="vm.isLoggedIn()">
-                <p class="navbar-text navbar-right">Welcome, <a href="#" class="navbar-link">{{ " " + vm.user.username + "!" }}</a></p>
-            </form>
         </div>
+        <form class="navbar-form navbar-left" data-ng-if="!vm.isLoggedIn()">
+            <div class="form-group">
+                <label class="sr-only" for="username">Username</label>
+                <input ng-model="vm.username" type="text" class="form-control" id="username" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+                <label class="sr-only" for="password">Password</label>
+                <input ng-model="vm.password" type="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <button ng-click="vm.login()" type="submit" class="btn btn-primary">Sign In</button>
+        </form>
+        <p data-ng-if="vm.isLoggedIn()" class="navbar-text navbar-right">Welcome, <a href="#" class="navbar-link">{{ vm.user().username}}!</a></p>
     </div>
 </nav>
