--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -15,6 +15,6 @@
             </div>
             <button ng-click="vm.login()" type="submit" class="btn btn-primary">Sign In</button>
         </form>
-        <p data-ng-if="vm.isLoggedIn()" class="navbar-text navbar-right">Welcome, <a href="#" class="navbar-link">{{ vm.user().username}}!</a></p>
+        <p data-ng-if="vm.isLoggedIn()" class="navbar-text navbar-right">Welcome, <a href="#" class="navbar-link">{{ vm.user.username}}!</a></p>
     </div>
 </nav>
