Profile, search and event details angular changes

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -7,12 +7,10 @@
                 </div>
                 <div class="col-sm-6 col-md-8">
                     <h4>{{vm.user().username}}</h4>
-                    <small class="user-location"><cite title="San Francisco, USA">San Francisco, USA <i class="glyphicon glyphicon-map-marker">
+                    <small class="user-location"><cite title="{{vm.user.city}},{{vm.user.country.name}}">{{vm.user.city}},{{vm.user.country.name}} <i class="glyphicon glyphicon-map-marker">
                     </i></cite></small>
                     <p>
-                        <i class="glyphicon glyphicon-envelope"></i>email@example.com
-                        <br />
-                        <i class="glyphicon glyphicon-globe"></i><a href="http://www.jquery2dotnet.com">www.jquery2dotnet.com</a>
+                        <i class="glyphicon glyphicon-envelope"></i>{{vm.user.email}}
                         <br />
                         <i class="glyphicon glyphicon-gift"></i>June 02, 1988</p>
 
@@ -25,7 +23,7 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img src="http://placehold.it/380x500" alt="...">
+                                <img src="http://placehold.it/600x500" alt="...">
                                 <div class="carousel-caption">
                                     ...
                                 </div>
