--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     <script src="app/components/lodash/dist/lodash.js"></script>
     <script src="app/components/restangular/dist/restangular.js"></script>
     <script src="app/components/ngstorage/ngStorage.js"></script>
+    <script src="app/components/ng-file-upload/ng-file-upload.js"></script>
 
 
     <script src="app/app.module.js"></script>
