--- a/client/index.html
+++ b/client/index.html
@@ -42,5 +42,7 @@
     <script src="app/search/search.js"></script>
     <script src="app/profile/profile.module.js"></script>
     <script src="app/profile/profile.js"></script>
+    <script src="app/eventadd/eventadd.module.js"></script>
+    <script src="app/eventadd/eventadd.js"></script>
 </body>
 </html>
