--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,6 +1,6 @@
     <div class="col-md-6 col-md-2" data-ng-repeat="event in vm.events">
         <div class="thumbnail" ui-sref="event({eventId: event.id})">
-            <img data-ng-if="event.host.profile_picture" src="/api/uploads/profile/{{ event.host.profile_picture }}" alt="{{ event.meal_name }}">
+            <img data-ng-if="event.host.profile_picture" ng-src="/api/uploads/profile/{{ event.host.profile_picture }}" alt="{{ event.meal_name }}">
             <div class="caption">
                 <h3>{{ event.meal_name }}</h3>
                 <p>{{ event.description }}</p>
