--- a/client/app/event/event.html
+++ b/client/app/event/event.html
@@ -19,10 +19,42 @@
         </div>
     </div>
 </div>
+<div class="col-xs-12 col-sm-6 col-md-6">
+    <div id="carousel-event" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-event" data-slide-to="0" class="active"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item" ng-class="{active: picture.id == 1}" data-ng-repeat="picture in vm.event.gallery">
+                <img ng-src="/api/uploads/event/{{picture.name}}" alt="...">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="" role="button" data-target="#carousel-event" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="" role="button" data-target="#carousel-event" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-6">
 <form name="form">
-    Single Image with validations
-    <div class="button" ngf-select ng-model="vm.file" name="file" ngf-pattern="'image/*'"
+    <button class="btn btn-success" ngf-select ng-model="vm.file" name="file" ngf-pattern="'image/*'"
          ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
-         ngf-resize="{width: 800, height: 600}">Select</div>
-    <button type="submit" ng-click="vm.submit()">submit</button>
+         ngf-resize="{width: 800, height: 600}">Add new image</button>
+    <button class="btn btn-info" type="submit" ng-click="vm.submit()">submit</button>
+    <div>
+        <img ngf-thumbnail="vm.file" class="preview-thumb">
+    </div>
 </form>
+</div>
