--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -15,6 +15,10 @@
             </div>
             <button ng-click="vm.login()" type="submit" class="btn btn-primary">Sign In</button>
         </form>
-        <p data-ng-if="vm.isLoggedIn()" class="navbar-text navbar-right">Welcome, <a href="#" class="navbar-link">{{ vm.user.username}}!</a></p>
+        <p data-ng-if="vm.isLoggedIn()" class="navbar-text navbar-right">
+            Welcome, <a ui-sref="profile" class="navbar-link">{{ vm.user.username}}!</a>
+            <button data-ng-click="vm.logout()" class="btn btn-default">logout</button>
+        </p>
+
     </div>
 </nav>
