--- a/client/app/eventadd/eventadd.html
+++ b/client/app/eventadd/eventadd.html
@@ -13,7 +13,7 @@
                 <label class="col-md-1 control-label" for="addressCountry">Country</label>
                 <div class="col-md-4">
                     <div class="form-group col-md-4">
-                        <select ng-model="vm.country" name="addressCountry" id="addressCountry" class="form-control form-control-lg"><option value="">Select Country</option><option ng-repeat="country in countries"></option></select>
+                        <select ng-model="vm.country" name="addressCountry" id="addressCountry" class="form-control form-control-lg"><option value="">Select Country</option><option value="{{country.id}}" ng-repeat="country in vm.countries">{{country.name}}</option></select>
                     </div>
                 </div>
             </div>
@@ -32,6 +32,15 @@
                                 </div>
                             </form>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="mealName">Meal Name</label>
+                <div class="col-md-4">
+                    <div class="form-group col-md-4">
+                        <input ng-model="vm.meal_name" class="form-control" name="mealName" id="mealName"/>
                     </div>
                 </div>
             </div>
@@ -113,7 +122,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label" for="submitButton"></label>
                 <div class="col-md-4">
-                    <button id="submitButton" name="submitButton" class="btn btn-primary">Submit</button>
+                    <button ng-click="vm.submit()" id="submitButton" name="submitButton" class="btn btn-primary">Submit</button>
                 </div>
             </div>
 
