changed event time column name

--- a/client/app/eventadd/eventadd.html
+++ b/client/app/eventadd/eventadd.html
@@ -27,7 +27,7 @@
                                 <div class="form-group registration-date">
                                     <div class="input-group registration-date-time">
                                         <span class="input-group-addon" id="basic-addon1"><span class="fa fa-calendar" aria-hidden="true"></span></span>
-                                        <input ng-model="vm.when" class="form-control" name="registration_date" id="registration-date" type="date">
+                                        <input ng-model="vm.when" class="form-control" name="registration_date" id="registration-date" type="datetime">
                                     </div>
                                 </div>
                             </form>
