Added link to add event style fix for event list

--- a/client/app/event/event.html
+++ b/client/app/event/event.html
@@ -20,15 +20,15 @@
     </div>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-6">
-    <div id="carousel-event" class="carousel slide" data-ride="carousel">
+    <div ng-if="vm.event.gallery.length>0" id="carousel-user" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#carousel-event" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-user" data-slide-to="0" class="active"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-            <div class="item" ng-class="{active: picture.id == 1}" data-ng-repeat="picture in vm.event.gallery">
+            <div class="item" ng-class="{active: key == 0}" data-ng-repeat="(key, picture) in vm.event.gallery">
                 <img ng-src="/api/uploads/event/{{picture.name}}" alt="...">
                 <div class="carousel-caption">
                     ...
@@ -37,11 +37,11 @@
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control" href="" role="button" data-target="#carousel-event" data-slide="prev">
+        <a class="left carousel-control" href="" role="button" data-target="#carousel-user" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="" role="button" data-target="#carousel-event" data-slide="next">
+        <a class="right carousel-control" href="" role="button" data-target="#carousel-user" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
