--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -14,7 +14,7 @@
                 <input ng-model="vm.password" type="password" class="form-control" id="password" placeholder="Password">
             </div>
             <button ng-click="vm.login()" type="submit" class="btn btn-primary">Sign In</button>
-        </form>
+        </form><a class="navbar-text navbar-left" data-ui-sref="search"> <span class="glyphicon glyphicon-search"></span> </a>
         <p data-ng-if="vm.isLoggedIn()" class="navbar-text navbar-right">
             Welcome, <a ui-sref="profile" class="navbar-link">{{ vm.user.username}}!</a>
             <button data-ng-click="vm.logout()" class="btn btn-default">logout</button>
